# soulrust

./: .bazelrc  BUILD.bazel  CLAUDE.md  COMPARISON.md  Cargo.toml  LICENSE  MODULE.bazel  PROTO_MIGRATION.md  README.md
.github/workflows/: release.yml
crates/actor_messenger/: BUILD.bazel  Cargo.toml
crates/actor_messenger/src/: lib.rs
crates/direct_messenger/: BUILD.bazel  Cargo.toml
crates/direct_messenger/src/: lib.rs
crates/messenger-macro/: BUILD.bazel  Cargo.toml
crates/messenger-macro/src/: generate.rs  lib.rs  spec.rs
crates/messenger-tests/: BUILD.bazel  Cargo.toml
crates/messenger-tests/src/: lib.rs
crates/soulrust/: BUILD.bazel  Cargo.toml  build.rs
crates/soulrust-integration-tests/: BUILD.bazel  Cargo.toml
crates/soulrust-integration-tests/src/: lib.rs
crates/soulrust-integration-tests/tests/: slskd_transfer.rs  soulfind_app.rs  soulfind_protocol.rs
crates/soulrust-proto/: BUILD.bazel  Cargo.toml
crates/soulrust-proto/src/: lib.rs
crates/soulrust/assets/: app.js
crates/soulrust/src/: config.rs  lib.rs  main.rs  messages.rs  search_response.rs  version.rs  wiring.rs
crates/soulrust/src/components/: api_server.rs  browse.rs  github.rs  mod.rs  net_edge.rs  peer_edge.rs  peer_net.rs  session.rs  transfer_io.rs  ui.rs  ui_theme.rs  updater.rs  web_bridge.rs
crates/soulrust/src/extract/: mod.rs  plain.rs  spotify.rs
crates/soulrust/src/shares/: audio.rs  mod.rs
crates/soulrust/src/transfers/: mod.rs  uploads.rs
crates/soulseek-proto/: BUILD.bazel  Cargo.toml
crates/soulseek-proto/src/: distributed.rs  frame.rs  lib.rs  peer.rs  peer_message.rs  server.rs  transfer.rs  wire.rs
crates/soulseek-proto/tests/: nicotine_vectors.rs
crates/soulseek-proto/tests/fixtures/: nicotine_vectors.rs
frontend/: .gitignore  BUILD.bazel  README.md  buf.gen.yaml  embed.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  client.ts  configIO.ts  format.ts  icons.tsx  index.css  main.ts  main.tsx  player.tsx  status.tsx  useWatch.ts
frontend/src/views/: BrowsePanel.tsx  BrowseView.tsx  ConfigView.tsx  DownloadsView.tsx  SearchView.tsx  SettingsView.tsx  SpotifyView.tsx  StatusBar.tsx  StatusPanel.tsx  StatusView.tsx  TransfersView.tsx  UploadsView.tsx
proto/: BUILD.bazel  buf.yaml
proto/soulrust/api/v1/: api.proto  status.proto
proto/soulrust/bus/v1/: bus.proto
proto/soulrust/greet/v1/: greet.proto
scripts/: check-protocol-edge-cases.sh  conformance-slskd.wf.js  gen-nicotine-vectors.py
tools/: BUILD.bazel
