"""soulrust - Rust workspace built with Bazel."""

module(
    name = "soulrust",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.70.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/messenger-macro:Cargo.toml",
        "//crates/messenger-tests:Cargo.toml",
        "//crates/soulrust:Cargo.toml",
        "//crates/soulrust-integration-tests:Cargo.toml",
        "//crates/soulseek-proto:Cargo.toml",
    ],
)
use_repo(crate, "crates")
