load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "messenger_tests",
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = [
        "//crates/messenger-macro:messenger_macro",
    ],
)

rust_test(
    name = "messenger_tests_test",
    crate = ":messenger_tests",
)
