[package]
name = "soulrust-proto"
version = "0.1.0"
edition = "2021"
description = "Generated protobuf and Connect API types for soulrust."
license = "MIT"

[dependencies]
buffa = { version = "0.7", features = ["json"] }
buffa-types = "0.7"
connectrpc = { version = "0.7", features = ["axum"] }
futures = "0.3"
http-body = "1"
rust-messenger = { git = "https://github.com/berendjan/rust-messenger.git", rev = "00fbefe" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
