load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "soulrust",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    compile_data = glob(["assets/*"]),
    visibility = ["//visibility:public"],
    # `@proto_deps//:tokio` (the copy axum is built against) is aliased to
    # `tokio_api` so it coexists with the peer reactor's `@crates//:tokio`
    # without an extern-name collision. The Connect API edge uses `tokio_api`.
    aliases = {
        "@proto_deps//:tokio": "tokio_api",
    },
    deps = [
        "//crates/soulrust-proto:soulrust_proto",
        "//crates/soulseek-proto:soulseek_proto",
        "@crates//:bincode",
        "@crates//:lofty",
        "@crates//:rust-messenger",
        "@crates//:self-replace",
        "@crates//:semver",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:socket2",
        "@crates//:tiny_http",
        "@crates//:tokio",
        "@crates//:ureq",
        "@proto_deps//:axum",
        "@proto_deps//:connectrpc",
        "@proto_deps//:tokio",
        "@proto_deps//:tower-http",
    ],
)

rust_binary(
    name = "soulrust_bin",
    srcs = ["src/main.rs"],
    deps = [
        ":soulrust",
        "@crates//:rust-messenger",
    ],
)

rust_test(
    name = "soulrust_test",
    crate = ":soulrust",
)
