load("@aspect_rules_js//js:defs.bzl", "js_run_binary")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

# Embed the hermetic Vite React bundle (//frontend:dist) into a generated Rust
# source table (src/web_assets_gen.rs), served by the ApiServer. The `embed`
# tool runs under the rules_js Node toolchain, so the whole frontend build stays
# hermetic end to end.
js_run_binary(
    name = "web_assets",
    srcs = ["//frontend:dist"],
    outs = ["src/web_assets_gen.rs"],
    # Paths are relative to the js_run_binary working dir (BAZEL_BINDIR).
    args = [
        "frontend/dist",
        "crates/soulrust/src/web_assets_gen.rs",
    ],
    tool = "//frontend:embed",
)

rust_library(
    name = "soulrust",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ) + [":web_assets"],
    compile_data = glob(["assets/*"]),
    visibility = ["//visibility:public"],
    # `@proto_deps//:tokio` (the copy axum is built against) is aliased to
    # `tokio_api` so it coexists with the peer reactor's `@crates//:tokio`
    # without an extern-name collision. The Connect API edge uses `tokio_api`.
    aliases = {
        "@proto_deps//:tokio": "tokio_api",
    },
    deps = [
        "//crates/soulrust-proto:soulrust_proto",
        "//crates/soulseek-proto:soulseek_proto",
        "@crates//:bincode",
        "@crates//:lofty",
        "@crates//:rust-messenger",
        "@crates//:self-replace",
        "@crates//:semver",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:socket2",
        "@crates//:tiny_http",
        "@crates//:tokio",
        "@crates//:ureq",
        "@proto_deps//:axum",
        "@proto_deps//:connectrpc",
        "@proto_deps//:tokio",
        "@proto_deps//:tower-http",
    ],
)

rust_binary(
    name = "soulrust_bin",
    srcs = ["src/main.rs"],
    deps = [
        ":soulrust",
        "@crates//:rust-messenger",
    ],
)

rust_test(
    name = "soulrust_test",
    crate = ":soulrust",
)
