[package]
name = "soulrust"
version = "0.1.0"
edition = "2021"
description = "Soulseek client: components on the rust-messenger bus, htmx web UI, self-updater, Spotify extractor."

[dependencies]
rust-messenger = { git = "file:///home/berend/Developer/rust-messenger", rev = "b80597f" }
soulseek-proto = { path = "../soulseek-proto" }
bincode = { version = "2", default-features = false, features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
self-replace = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt", "net", "io-util", "time"] }
ureq = { version = "2", features = ["json"] }
