[package]
name = "soulrust"
version = "0.0.2"
edition = "2021"
description = "Soulseek client: components on the rust-messenger bus, htmx web UI, self-updater, Spotify extractor."

[dependencies]
rust-messenger = { git = "https://github.com/berendjan/rust-messenger.git", rev = "00fbefe" }
soulseek-proto = { path = "../soulseek-proto" }
bincode = { version = "2", default-features = false, features = ["std", "serde"] }
lofty = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
self-replace = "1"
socket2 = "0.6"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync", "fs"] }
ureq = { version = "2", features = ["json"] }
